Adjust test & polishing